# OpenNeuralNetwork

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  openANN
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
include/utils/: Math.hpp
src/: Layer.cpp  Matrix.cpp  Neuron.cpp  main.cpp
src/neural_network/: NeuralNetwork.cpp  backPropagation.cpp  feedForward.cpp  setErrors.cpp  train.cpp
src/utils/: Math.cpp
